# crosscheck

./: .env.example  .gitignore  Procfile  pyproject.toml  requirements.txt  requirements_app.txt  requirements_testing.txt
.github/workflows/: python-app.yml
app/: __init__.py  app.py  celery.py  crosscheck.py  preprocess.py  redis.py  retrieve.py  tasks.py
app/templates/: response.html
docs/: index.html  main.js  manifest.json  style.css
notebooks/: crosscheck.ipynb  prune.ipynb
src/crosscheck/: crosscheck.py  preprocess.py  retrieve.py
tests/: test_crosscheck.py  test_preprocess.py  test_retrieve.py  test_tasks.py
